updated projects link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a class="nav-link" aria-current="page" href="#foot-contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects-portfolio">Projects</a>
+              <a class="nav-link" href="#project-section">Projects</a>
             </li>
             <li class="nav-item">
               <a 
@@ -104,7 +104,7 @@
       </div>
     </div>
 
-    <div class="container projects-portfolio text-center mt-5">
+    <div class="container projects-portfolio text-center mt-5" id="project-section">
       <h2 class="mb-5 p-2 projects-head">Projects</h2>
       <div class="projects row justify-content-around">
         <!-- container for projects section -->
