replaced resume with updated copy of resume

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li class="nav-item">
               <a 
                 class="nav-link btn btn-light" 
-                href="resources/docs/Anuli Edom - Software Engineer Full-Stack.pdf" 
+                href="resources/docs/Anuli Edom - Software Engineer Projects.pdf" 
                 target="_blank">Resume
               </a>
             </li>
@@ -83,7 +83,7 @@
             that cater to diverse needs.
           </p>
           <div>
-            <a type="button" class="btn btn-dark fw-semibold fs-4" href="resources/docs/Anuli Edom - Software Engineer Full-Stack.pdf" target="_blank">Resume</a>
+            <a type="button" class="btn btn-dark fw-semibold fs-4" href="resources/docs/Anuli Edom - Software Engineer Projects.pdf" target="_blank">Resume</a>
           </div>
         </div>
       </div>
